fix: switch from python-jose to PyJWT and fix type errors
- Replace python-jose[cryptography] with PyJWT[crypto]
- Update JWT imports to use jwt.exceptions.PyJWTError
- Add RSAAlgorithm.from_jwk() for JWK key conversion
- Fix mypy type errors with proper casts and assertions
- Fix datetime.utcnow() deprecation warnings

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "psycopg2-binary>=2.9.7",
     "asyncpg>=0.29.0",
     "greenlet>=3.0.0",  # Required for SQLAlchemy async operations
-    "python-jose[cryptography]==3.3.0",
+    "PyJWT[crypto]>=2.8.0",
     "passlib[bcrypt]==1.7.4",
     "bcrypt==3.2.0",
     "python-multipart==0.0.6",
