--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -21,6 +21,8 @@ addopts =
     --tb=short
     -n auto
     --dist worksteal
+    -W ignore::DeprecationWarning
+    -W ignore::UserWarning
 
 # Markers for test categorization
 markers =
