--- a/.forgejo/workflows/test.yml
+++ b/.forgejo/workflows/test.yml
@@ -34,6 +34,8 @@ jobs:
   backend-tests:
     runs-on: ubuntu-latest
     name: Backend Tests
+    env:
+      DOCKER_HOST: tcp://localhost:2375
     strategy:
       matrix:
         python-version: ["3.13"]
