--- a/.forgejo/workflows/deploy.yml
+++ b/.forgejo/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  REGISTRY: brahma.myth-gecko.ts.net:3000
+  REGISTRY: forgejo.default.svc.cluster.local:3000
   REGISTRY_OWNER: stackhouse
 
 jobs:
