--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "python-multipart==0.0.6",
     "python-dotenv==1.0.0",
     "httpx>=0.26.0",
+    "openai>=1.0.0",
     "alembic>=1.17.2",
     "stream-zip>=0.0.83",
 ]
