feat: add build version info to health endpoint and frontend
Centralize version info in backend/app/version.py and ui/src/version.ts
so deployed builds expose git SHA and build date — queryable via
/health, /, and browser console (window.__PARCHMARK__).

- Inject GIT_SHA and BUILD_DATE via Docker build args in CI
- Replace all hardcoded '1.0.0' with version module (now 1.1.0)
- Frontend logs 'ParchMark v1.1.0 (sha)' on startup
- Add AI embeddings design doc with Mermaid diagrams

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -44,9 +44,15 @@ COPY --from=builder /app/scripts/docker-entrypoint.sh /docker-entrypoint.sh
 # Don't copy env files in production - they should be mounted or provided via env_file
 # For development, you can mount .env.docker or .env.production at runtime
 
+# Version info injected at build time
+ARG GIT_SHA=dev
+ARG BUILD_DATE=unknown
+
 # Activate the virtual environment by adding it to PATH
 ENV PATH="/app/.venv/bin:$PATH"
 ENV VIRTUAL_ENV="/app/.venv"
+ENV GIT_SHA=$GIT_SHA
+ENV BUILD_DATE=$BUILD_DATE
 
 # Expose the port the app runs on
 EXPOSE 8000
