fix(ci): pass GIT_SHA and BUILD_DATE build args in Forgejo deploy workflow
The Forgejo deploy workflow was building Docker images without passing
GIT_SHA and BUILD_DATE as build args, causing the health endpoint to
always show gitSha: "dev" in production. The disabled GitHub Actions
workflow had this correct but it was never ported to the Forgejo workflow.

--- a/.forgejo/workflows/deploy.yml
+++ b/.forgejo/workflows/deploy.yml
@@ -75,7 +75,10 @@ jobs:
       - name: Build and push backend image
         run: |
           SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
+          BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
           docker build \
+            --build-arg GIT_SHA=${{ github.sha }} \
+            --build-arg BUILD_DATE=${BUILD_DATE} \
             -t ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/parchmark-backend:latest \
             -t ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/parchmark-backend:sha-${SHORT_SHA} \
             -f ./backend/Dockerfile.prod ./backend
@@ -101,7 +104,10 @@ jobs:
       - name: Build and push frontend image
         run: |
           SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
+          BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
           docker build \
+            --build-arg GIT_SHA=${{ github.sha }} \
+            --build-arg BUILD_DATE=${BUILD_DATE} \
             -t ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/parchmark-frontend:latest \
             -t ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/parchmark-frontend:sha-${SHORT_SHA} \
             -f ./ui/Dockerfile ./ui
