feat(version): replace semver with auto CalVer (YYYYMMDD.HHMM.sha)
Remove hardcoded VERSION='1.1.0' and derive version entirely from CI
build metadata via APP_VERSION env var. Zero manual bumps required.

- backend/app/version.py: VERSION reads from APP_VERSION env var
- Dockerfiles: add ARG/ENV APP_VERSION for backend and frontend
- deploy.yml: compute APP_VERSION=$(date).sha and pass as build-arg
- vite.config.ts: read APP_VERSION from env instead of package.json
- pyproject.toml/package.json: set version to 0.0.0 (inert placeholder)
- Drop 'v' prefix from version strings (CalVer is not semver)

--- a/.forgejo/workflows/deploy.yml
+++ b/.forgejo/workflows/deploy.yml
@@ -76,9 +76,11 @@ jobs:
         run: |
           SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
           BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+          APP_VERSION=$(date -u +'%Y%m%d.%H%M').${SHORT_SHA}
           docker build \
             --build-arg GIT_SHA=${{ github.sha }} \
             --build-arg BUILD_DATE=${BUILD_DATE} \
+            --build-arg APP_VERSION=${APP_VERSION} \
             -t ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/parchmark-backend:latest \
             -t ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/parchmark-backend:sha-${SHORT_SHA} \
             -f ./backend/Dockerfile.prod ./backend
@@ -105,9 +107,11 @@ jobs:
         run: |
           SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
           BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+          APP_VERSION=$(date -u +'%Y%m%d.%H%M').${SHORT_SHA}
           docker build \
             --build-arg GIT_SHA=${{ github.sha }} \
             --build-arg BUILD_DATE=${BUILD_DATE} \
+            --build-arg APP_VERSION=${APP_VERSION} \
             -t ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/parchmark-frontend:latest \
             -t ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/parchmark-frontend:sha-${SHORT_SHA} \
             -f ./ui/Dockerfile ./ui
