--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -54,6 +54,7 @@ COPY --from=builder --chown=appuser:appuser /app/migrations /app/migrations
 # Version info injected at build time
 ARG GIT_SHA=dev
 ARG BUILD_DATE=unknown
+ARG APP_VERSION=dev
 
 # Activate the virtual environment
 ENV PATH="/app/.venv/bin:$PATH"
@@ -62,6 +63,7 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV GIT_SHA=$GIT_SHA
 ENV BUILD_DATE=$BUILD_DATE
+ENV APP_VERSION=$APP_VERSION
 
 # Switch to non-root user
 USER appuser
